--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="send_message_hint">Type a message...</string>
     <string name="login_loading">Logging in...</string>
     <string name="not_implemented_yet">Not implemented yet!</string>
+    <string name="enter_username">Enter username</string>
 </resources>
